# HW21.2_web_layout_basics

./: README.md  pyproject.toml  web.py
html/: catalog.html  contacts.html  main.html
